[package]
name                      = "features"
description               = "MF Rust examples"
authors                   = ["Mohammed Fahsi <md.fahsi@gmail.com>"]
edition                   = "2021"
repository                = "https://github.com/mfahsi/rusty"
keywords                  = ["rust"]
categories                = ["playground"]
version                   = "0.1.0"
readme                    = "../README.md"
license                   = "MIT"

[badges]
github                    = { repository = "mfahsi/rusty"}
maintenance               = { status = "passively-maintained" }

[dependencies]
thiserror                 = "1"
serde = "1.0.140"
serde_json = "1.0.82"